Don't use master/slave; finish whitelist/blacklist
Replaced "master" DRBG with "pimary."  Fixed some markup with <private>,
etc., in some DRBG pages; use I<private>, etc.  Looking for master finds
many false positives because of TLS concepts like "master key" and such,
but I believe I fixed all. Add compat macro for the old name.

To minimize false positives, replace "white space" with "whitespace"
and teach find-doc-nits to prefer the latter. (This was partially done in
commit 6f72b210, but this finished the job.)

Replace "blacklist" with "block list" and "black magic" comments with
"magic."

--- a/doc/man3/RAND_DRBG_get0_primary.pod
+++ b/doc/man3/RAND_DRBG_get0_primary.pod
@@ -2,10 +2,10 @@
 
 =head1 NAME
 
-OPENSSL_CTX_get0_master_drbg,
+OPENSSL_CTX_get0_primary_drbg,
 OPENSSL_CTX_get0_public_drbg,
 OPENSSL_CTX_get0_private_drbg,
-RAND_DRBG_get0_master,
+RAND_DRBG_get0_primary,
 RAND_DRBG_get0_public,
 RAND_DRBG_get0_private
 - get access to the global RAND_DRBG instances
@@ -14,10 +14,10 @@ RAND_DRBG_get0_private
 
  #include <openssl/rand_drbg.h>
 
- RAND_DRBG *OPENSSL_CTX_get0_master_drbg(OPENSSL_CTX *ctx);
+ RAND_DRBG *OPENSSL_CTX_get0_primary_drbg(OPENSSL_CTX *ctx);
  RAND_DRBG *OPENSSL_CTX_get0_public_drbg(OPENSSL_CTX *ctx);
  RAND_DRBG *OPENSSL_CTX_get0_private_drbg(OPENSSL_CTX *ctx);
- RAND_DRBG *RAND_DRBG_get0_master(void);
+ RAND_DRBG *RAND_DRBG_get0_primary(void);
  RAND_DRBG *RAND_DRBG_get0_public(void);
  RAND_DRBG *RAND_DRBG_get0_private(void);
 
@@ -29,14 +29,14 @@ shared DRBG instances which are accessed via the RAND API:
 
 The I<public> and I<private> DRBG are thread-local instances, which are used
 by RAND_bytes() and RAND_priv_bytes(), respectively.
-The I<master> DRBG is a global instance, which is not intended to be used
+The I<primary> DRBG is a global instance, which is not intended to be used
 directly, but is used internally to reseed the other two instances.
 
 These functions here provide access to the shared DRBG instances.
 
 =head1 RETURN VALUES
 
-OPENSSL_CTX_get0_master_drbg() returns a pointer to the I<master> DRBG instance
+OPENSSL_CTX_get0_primary_drbg() returns a pointer to the I<primary> DRBG instance
 for the given OPENSSL_CTX B<ctx>.
 
 OPENSSL_CTX_get0_public_drbg() returns a pointer to the I<public> DRBG instance
@@ -46,15 +46,15 @@ OPENSSL_CTX_get0_private_drbg() returns a pointer to the I<private> DRBG instanc
 for the given OPENSSL_CTX B<ctx>.
 
 In all the above cases the B<ctx> parameter can
-be NULL in which case the default OPENSSL_CTX is used. RAND_DRBG_get0_master(),
+be NULL in which case the default OPENSSL_CTX is used. RAND_DRBG_get0_primary(),
 RAND_DRBG_get0_public() and RAND_DRBG_get0_private() are the same as
-OPENSSL_CTX_get0_master_drbg(), OPENSSL_CTX_get0_public_drbg() and
+OPENSSL_CTX_get0_primary_drbg(), OPENSSL_CTX_get0_public_drbg() and
 OPENSSL_CTX_get0_private_drbg() respectively except that the default OPENSSL_CTX
 is always used.
 
 =head1 NOTES
 
-It is not thread-safe to access the I<master> DRBG instance.
+It is not thread-safe to access the I<primary> DRBG instance.
 The I<public> and I<private> DRBG instance can be accessed safely, because
 they are thread-local. Note however, that changes to these two instances
 apply only to the current thread.
@@ -80,7 +80,7 @@ L<RAND_DRBG(7)>
 
 =head1 HISTORY
 
-The OPENSSL_CTX_get0_master_drbg(), OPENSSL_CTX_get0_public_drbg() and
+The OPENSSL_CTX_get0_primary_drbg(), OPENSSL_CTX_get0_public_drbg() and
 OPENSSL_CTX_get0_private_drbg() functions were added in OpenSSL 3.0.
 
 All other RAND_DRBG functions were added in OpenSSL 1.1.1.
