--- a/doc/man3/RAND_DRBG_reseed.pod
+++ b/doc/man3/RAND_DRBG_reseed.pod
@@ -23,10 +23,10 @@ RAND_DRBG_set_reseed_defaults
                                         time_t interval);
 
  int RAND_DRBG_set_reseed_defaults(
-                                   unsigned int master_reseed_interval,
-                                   unsigned int slave_reseed_interval,
-                                   time_t master_reseed_time_interval,
-                                   time_t slave_reseed_time_interval
+                                   unsigned int primary_reseed_interval,
+                                   unsigned int secondary_reseed_interval,
+                                   time_t primary_reseed_time_interval,
+                                   time_t secondary_reseed_time_interval
                                    );
 
 
@@ -60,12 +60,13 @@ elapsed time since its last reseeding exceeds the given reseed time interval.
 If B<interval> == 0, then this feature is disabled.
 
 RAND_DRBG_set_reseed_defaults() sets the default values for the reseed interval
-(B<master_reseed_interval> and B<slave_reseed_interval>)
+(B<primary_reseed_interval> and B<secondary_reseed_interval>)
 and the reseed time interval
-(B<master_reseed_time_interval> and B<slave_reseed_tme_interval>)
+(B<primary_reseed_time_interval> and B<secondary_reseed_time_interval>)
 of DRBG instances.
-The default values are set independently for master DRBG instances (which don't
-have a parent) and slave DRBG instances (which are chained to a parent DRBG).
+The default values are set independently for primary DRBG instances,
+which don't have a primary, and secondary DRBG instances, which are chained
+to a primary DRBG.
 
 =head1 RETURN VALUES
 
@@ -74,7 +75,6 @@ RAND_DRBG_set_reseed_interval(), and
 RAND_DRBG_set_reseed_time_interval(),
 return 1 on success, 0 on failure.
 
-
 =head1 NOTES
 
 The default OpenSSL random generator is already set up for automatic reseeding,
@@ -82,14 +82,14 @@ so in general it is not necessary to reseed it explicitly, or to modify
 its reseeding thresholds.
 
 Normally, the entropy input for seeding a DRBG is either obtained from a
-trusted os entropy source or from a parent DRBG instance, which was seeded
+trusted os entropy source or from a primary DRBG instance, which was seeded
 (directly or indirectly) from a trusted os entropy source.
 In exceptional cases it is possible to replace the reseeding mechanism entirely
 by providing application defined callbacks using RAND_DRBG_set_callbacks().
 
 The reseeding default values are applied only during creation of a DRBG instance.
 To ensure that they are applied to the global and thread-local DRBG instances
-(<master>, resp. <public> and <private>), it is necessary to call
+(I<primary>, and I<public> or I<private>), it is necessary to call
 RAND_DRBG_set_reseed_defaults() before creating any thread and before calling any
  cryptographic routines that obtain random data directly or indirectly.
 
