--- a/doc/man3/SSL_CTX_set1_curves.pod
+++ b/doc/man3/SSL_CTX_set1_curves.pod
@@ -68,18 +68,19 @@ order. It can return zero if the client did not send a supported groups
 extension. If a supported group NID is unknown then the value is set to the
 bitwise OR of TLSEXT_nid_unknown (0x1000000) and the id of the group.
 
-SSL_get_shared_group() returns the NID  of the shared group B<n> for a
+SSL_get_shared_group() returns the NID of the shared group B<n> for a
 server-side SSL B<ssl>. If B<n> is -1 then the total number of shared groups is
 returned, which may be zero. Other than for diagnostic purposes,
 most applications will only be interested in the first shared group
 so B<n> is normally set to zero. If the value B<n> is out of range,
-NID_undef is returned. If the NID for the shared group is unknown then value is
-set to the bitwise OR of TLSEXT_nid_unknown (0x1000000) and the id of the group.
+NID_undef is returned. If the NID for the shared group is unknown then the value
+is set to the bitwise OR of TLSEXT_nid_unknown (0x1000000) and the id of the
+group.
 
 SSL_get_negotiated_group() returns the NID of the negotiated group on a TLSv1.3
 connection for key exchange. This can be called by either client or server. If
-the NID for the shared group is unknown then value is set to the bitwise OR of
-TLSEXT_nid_unknown (0x1000000) and the id of the group.
+the NID for the shared group is unknown then the value is set to the bitwise OR
+of TLSEXT_nid_unknown (0x1000000) and the id of the group.
 
 All these functions are implemented as macros.
 
