--- a/doc/internal/man3/ossl_provider_new.pod
+++ b/doc/internal/man3/ossl_provider_new.pod
@@ -15,7 +15,7 @@ ossl_provider_library_context,
 ossl_provider_teardown, ossl_provider_gettable_params,
 ossl_provider_get_params, ossl_provider_query_operation,
 ossl_provider_set_operation_bit, ossl_provider_test_operation_bit,
-ossl_provider_get_capabilties
+ossl_provider_get_capabilities
 - internal provider routines
 
 =head1 SYNOPSIS
@@ -61,7 +61,7 @@ ossl_provider_get_capabilties
  void ossl_provider_teardown(const OSSL_PROVIDER *prov);
  const OSSL_PARAM *ossl_provider_gettable_params(const OSSL_PROVIDER *prov);
  int ossl_provider_get_params(const OSSL_PROVIDER *prov, OSSL_PARAM params[]);
- int ossl_provider_get_capabilties(const OSSL_PROVIDER *prov,
+ int ossl_provider_get_capabilities(const OSSL_PROVIDER *prov,
                                    const char *capability,
                                    OSSL_CALLBACK *cb,
                                    void *arg);
@@ -213,7 +213,7 @@ responder.
 It should treat the given I<OSSL_PARAM> array as described in
 L<OSSL_PARAM(3)>.
 
-ossl_provider_get_capabilties() calls the provider's I<get_capabilties> function,
+ossl_provider_get_capabilities() calls the provider's I<get_capabilities> function,
 if the provider has one. It provides the name of the I<capability> and a
 callback I<cb> parameter to call for each capability that has a matching name in
 the provider. The callback gets passed OSSL_PARAM details about the capability as
@@ -296,7 +296,7 @@ If this function isn't available in the provider, 0 is returned.
 ossl_provider_set_operation_bit() and ossl_provider_test_operation_bit()
 return 1 on success, or 0 on error.
 
-ossl_provider_get_capabilties() returns 1 on success, or 0 on error.
+ossl_provider_get_capabilities() returns 1 on success, or 0 on error.
 If this function isn't available in the provider or the provider does not
 support the requested capability then 0 is returned.
 
