--- a/doc/man7/provider-signature.pod
+++ b/doc/man7/provider-signature.pod
@@ -8,7 +8,7 @@ provider-signature - The signature library E<lt>-E<gt> provider functions
 
 =for openssl multiple includes
 
- #include <openssl/core_numbers.h>
+ #include <openssl/core_dispatch.h>
  #include <openssl/core_names.h>
 
  /*
@@ -101,7 +101,7 @@ For example, the "function" OP_signature_newctx() has these:
      OSSL_get_OP_signature_newctx(const OSSL_DISPATCH *opf);
 
 B<OSSL_DISPATCH> arrays are indexed by numbers that are provided as
-macros in L<openssl-core_numbers.h(7)>, as follows:
+macros in L<openssl-core_dispatch.h(7)>, as follows:
 
  OP_signature_newctx                 OSSL_FUNC_SIGNATURE_NEWCTX
  OP_signature_freectx                OSSL_FUNC_SIGNATURE_FREECTX
