--- a/doc/man7/provider-keyexch.pod
+++ b/doc/man7/provider-keyexch.pod
@@ -8,7 +8,7 @@ provider-keyexch - The keyexch library E<lt>-E<gt> provider functions
 
 =for openssl multiple includes
 
- #include <openssl/core_numbers.h>
+ #include <openssl/core_dispatch.h>
  #include <openssl/core_names.h>
 
  /*
@@ -61,7 +61,7 @@ For example, the "function" OP_keyexch_newctx() has these:
      OSSL_get_OP_keyexch_newctx(const OSSL_DISPATCH *opf);
 
 B<OSSL_DISPATCH> arrays are indexed by numbers that are provided as
-macros in L<openssl-core_numbers.h(7)>, as follows:
+macros in L<openssl-core_dispatch.h(7)>, as follows:
 
  OP_keyexch_newctx                OSSL_FUNC_KEYEXCH_NEWCTX
  OP_keyexch_freectx               OSSL_FUNC_KEYEXCH_FREECTX
